Docs: add docs for enums
